# solovision

./: .gitattributes  .gitignore  README.md  pyproject.toml
solovision/: __init__.py  cli.py  track.py  tracker_zoo.py
solovision/appearance/: reid_auto_backend.py  reid_export.py  reid_model_factory.py
solovision/appearance/backbones/clip/clip/: simple_tokenizer.py
solovision/appearance/backends/: base_backend.py  onnx_backend.py  openvino_backend.py  pytorch_backend.py  tensorrt_backend.py  tflite_backend.py  torchscript_backend.py
solovision/appearance/exporters/: base_exporter.py  onnx_exporter.py  openvino_exporter.py  tensorrt_exporter.py  tflite_exporter.py  torchscript_exporter.py
solovision/configs/: bytetrack.yaml
solovision/detectors/: __init__.py  yolo_interface.py  yolov8.py  yolov9.py  yolox.py
solovision/motion/cmc/: __init__.py  ecc.py  orb.py  sift.py  sof.py
solovision/motion/kalman_filters/: xyah_kf.py  xywh_kf.py
solovision/postprocessing/: gsi.py
solovision/solovision_app/: main.py  model_selection.py  utils.py
solovision/trackers/: basetracker.py
solovision/trackers/bytetrack/: basetrack.py  byte_tracker.py  bytetrack_utils.py  bytetracker.py  strack.py
solovision/utils/: __init__.py  association.py  checks.py  matching.py  ops.py  torch_utils.py
tracking/: track.py  utils.py  val.py
tracking/detectors/: __init__.py  yolonas.py  yolov9.py  yolox.py
