[tool.poetry]
name = "solovision"
version = "0.1.0"
description = "A YOLO-based object tracking project using ByteTrack."
authors = ["Zeeshaan", "Dhruv"]

keywords = ["tracking", "vision", "YOLO"]


[tool.poetry.dependencies]
python = "^3.9"
filterpy = "^1.4.5"
gdown = "^5.1.0"
lapx = "^0.5.5"
loguru = "^0.7.2"
numpy = "1.26.4"
pyyaml = "^6.0.1"
regex = "^2024.0.0"
yacs = "^0.1.8"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
opencv-python = "^4.7.0"
ftfy = "^6.1.3"
gitpython = "^3.1.42"
torch = [
    {version = "^2.2.1", source="torch_cuda121", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {version = "^2.2.1", source="pypi", markers = "sys_platform == 'darwin'"},  
]
torchvision = [
    {version = "^0.17.1", source="torch_cuda121", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {version = "^0.17.1", source="pypi", markers = "sys_platform == 'darwin'"},    
]


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.yolo.dependencies]
ultralytics = {git = "https://github.com/mikel-brostrom/ultralytics.git"}


[[tool.poetry.source]]
name = "torch_cuda121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [".tox", "*.egg", "build", "temp"]
select = ["E", "W", "F"]
doctests = true
verbose = 2
format = "pylint"
ignore = ["E731", "F405", "E402", "W504", "W605", "E741"]
